modules/noosphere/taghmata/nixidy/manifests/prod/prometheus-grafana/Ingress-grafana-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: monitoring
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Dashboards
    glance/icon: di:grafana
    glance/id: grafana
    glance/name: Grafana
    glance/parent: grafana
    glance/url: https://grafana.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: grafana-ip-root
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.noosphere.uk
      secretName: grafana-tls
